package bu.edu.met673.api.innercircle.configuration;

public final class Constants {
  private Constants() { }

  public static final String firebaseDatabaseURL = "https://inner-circle-fdd5f.firebaseio.com";
  public static final String firebaseBucketURL = "inner-circle-fdd5f.appspot.com";
  public static final String googleServiceJSON = "/inner-circle-firebase-adminsdk.json";
}
